# QuorumCredit

./: .gitignore  API_IMPROVEMENTS_SUMMARY.md  BENCHMARKING.md  BENCHMARKING_QUICK_START.md  BUILD_VERIFICATION_REPORT.md  CI_FIX_REPORT.md  COMPLETION_CHECKLIST.md  CREDIT_SCORE_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DYNAMIC_SLASH_THRESHOLD_IMPLEMENTATION.md  GAS_BENCHMARKING_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_IMPLEMENTATION.md  MILESTONE_TRANCHES_PR.md  Makefile  PR_CREATION_STEPS.md  PR_DESCRIPTION.md  PR_DETAILS.md  README.md  TEST_STRUCTURE.txt  mutants.toml  setup_and_test.ps1  task.md
.github/workflows/: ci.yml  coverage.yml  deploy-testnet.yml  docs.yml  gas-benchmarks.yml  release.yml  sdk-generation.yml  testnet-integration.yml
QuorumCredit/src/: admin.rs  admin_delegation_test.rs  default_prediction_test.rs  errors.rs  fraud_detection.rs  governance.rs  governance_veto_test.rs  helpers.rs  lib.rs  liquidity_mining.rs  loan.rs  staking_derivatives.rs  syndication_test.rs  types.rs  vouch_snapshot.rs
api/: Cargo.toml  README.md
api/src/: analytics.rs  load_test.rs  main.rs  partial_repayment_analytics.rs  rate_limiter.rs  webhook.rs  ws.rs
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: AnalyticsDashboard.tsx  LoanCard.tsx  LoanStatusDashboard.tsx  Logo.tsx  analytics.ts  loanSlice.ts  main.tsx  setupTests.ts  store.ts  stroops.ts  useLoanSocket.ts  useMetricsSocket.ts
docs/: benchmarks.json  credit-score-guide.md  credit-score-migration.md  economic-security-model.md  event-indexing-guide.md  gas-budgets.md  governance-queue-guide.md  monitoring-guide.md  mutation-testing.md  partial-repayment-compound-interest.md  security-best-practices.md  syndication-guide.md  vouch-cooldown-bypass-1056.md
middleware/: README.md  rate_limiter.js
scripts/: run_mutation_testing.sh  sybil_simulation.py  testnet_full_workflow.sh
sdk/python/: mypy.ini  setup.py  test_client.py
sdk/typescript/: package-lock.json  package.json  (+2 more)
src/: access_control_verification_test.rs  admin.rs  anti_dust_attack_test.rs  api_reference_test.rs  archive.rs  attributes.rs  audit_trail_immutability_test.rs  batch_stake_test.rs  batch_transfer.rs  batch_vouch_selective_rollback_test.rs  bridge_rate_oracle.rs  cache.rs  chaos_test.rs  circuit_breaker_test.rs  co_borrower_test.rs  collateral_pool.rs  collateral_pool_cross_chain_test.rs  commitment_scheme_audit_test.rs  conditional_vote_delegation_test.rs  config_update_voting_test.rs  contract.rs  cooldown_bypass.rs  cooldown_bypass_test.rs  coverage_test.rs  credit_score.rs  credit_score_test.rs  cross_chain.rs  cross_chain_proposal_sync_test.rs  cross_chain_relay.rs  cross_chain_vouch_test.rs  decrease_stake_full_withdrawal_test.rs  delegation.rs  dependency_audit_test.rs  detection.rs  detection_test.rs  doc_tests.rs  double_slash_panic_test.rs  duplicate_loan_test.rs  duplicate_vouch_test.rs  dynamic_min_stake_test.rs  (+153 more)
tests/: benchmark_integration_test.rs
tools/: benchmark_analyzer.py  run_benchmarks.sh
tools/indexer/: Cargo.toml
tools/indexer/src/: db.rs  indexer.rs  lib.rs  main.rs  metrics.rs  rpc.rs
tools/indexer/tests/: integration_test.rs
tools/sdkgen/: Cargo.toml
tools/sdkgen/src/: lib.rs
tools/sdkgen/tests/: sdkgen_tests.rs
(+31 files in other folders)
