[workspace]
members = ["tools/indexer"]
resolver = "2"

[package]
name = "quorum_credit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.0.0", features = ["alloc"] }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }
ed25519-dalek = "2.2"

[profile.coverage]
inherits = "test"


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
